--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@ function greet(name) {
 
     <h2>Прогресс и спиннер</h2>
     <div class="spinner"></div>
+
+    <h2>Загрузка файлов</h2>
+    <div class="file-upload">
+      <label for="file-input" class="file-upload-label">Выберите файл</label>
+      <input type="file" id="file-input">
+    </div>
   </div>
 
   <script src="theme.js"></script>
