button fonts fix

--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@ function greet(name) {
     <h2>Прогресс и спиннер</h2>
     <div class="spinner"></div>
 
+    <h2>Обычная кнопка</h2>
+    <button type="button">Нажми меня</button>
+
     <h2>Загрузка файлов</h2>
     <div class="file-upload">
       <label for="file-input" class="file-upload-label">Выберите файл</label>
