--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@ function greet(name) {
       <label for="file-input" class="file-upload-label">Выберите файл</label>
       <input type="file" id="file-input">
     </div>
+
+  <h2>Футер</h2>
+
+  <footer>
+    <p>made with ♡ by ch1ka</p>
+  </footer>
   </div>
 
   <script src="theme.js"></script>
