--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Тестовая страница</title>
-  <link rel="stylesheet" href="styleBasic.css">
+  <link rel="stylesheet" href="styleBasic.min.css">
 </head>
 <body>
   <div class="container">
@@ -92,6 +92,6 @@ function greet(name) {
   </footer>
   </div>
 
-  <script src="theme.js"></script>
+  <script src="theme.min.js"></script>
 </body>
 </html>
